# app

./: .gitignore  Cargo.toml  README.md  analysis_options.yaml  flake.nix  pubspec.yaml
.github/workflows/: widgetbook.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: AppBinding.dart  AppConfig.dart  AppPages.dart  AppRoutes.dart  app_config.dart  application.dart  binding.dart  config.dart  constants.dart  cool_button.dart  helpers_wb.dart  main.dart  main.directories.g.dart  pages.dart  router.dart  routes.dart  theme.dart  utils.dart
lib/enums/: CallStatus.dart  MessageState.dart  call_status.dart  message_state.dart  message_type.dart
lib/features/onboarding/: README.md  common_wb.dart
lib/features/onboarding/i18n/: common.dart  en.dart
lib/features/onboarding/ui/: verify.dart  verify_wb.dart
lib/features/onboarding/views/: verify.dart
lib/features/security/: README.md  common_wb.dart
lib/features/security/i18n/: common.dart  en.dart
lib/features/security/ui/: change.dart  change_wb.dart  disable.dart  disable_wb.dart  enter.dart  enter_wb.dart  reset.dart  reset_password.dart  reset_password_wb.dart  reset_wb.dart  settings.dart  settings_wb.dart  setup.dart  setup_wb.dart
lib/helpers/: GeneralHelper.dart  general.dart
lib/i18n/: Messages.dart  en.dart  extension.dart  messages.dart  ru.dart  uz.dart
lib/models/: CallHistory.dart  ChatContact.dart  MessageTypes.dart  call_history.dart  chat_contact.dart  message_types.dart
lib/pages/: base_controller.dart
lib/pages/auth/bindings/: binding.dart
lib/pages/auth/controllers/: controller.dart
lib/pages/auth/views/: view.dart
lib/pages/chat/bindings/: binding.dart
lib/pages/chat/controllers/: controller.dart
lib/pages/chat/views/: userDetailsPage.dart  user_details.dart  view.dart
lib/pages/home/: common_wb.dart
lib/pages/home/models/: nav_item.dart  (+1 more)
lib/repositories/: ChatRepo.dart  chat_repo.dart
lib/screens/: authorize.dart  chat.dart  chat_list.dart  init.dart  splash.dart
lib/services/: ChatService.dart  StorageService.dart  chat_service.dart  storage_service.dart
lib/themes/: application_theme.dart  default.dart
lib/widgetbook/: localization_getx_addon.dart
lib/widgets/: ChatContactTile.dart  ChatMessageBar.dart  ChatsList.dart  CustomBottomNavigationBar.dart  CustomPopupMenuItem.dart  MessageBubble.dart  SettingsCardBlock.dart  SvgImage.dart  TimeAgoText.dart  UserAvatar.dart  badge.dart  bottom_navigation_bar.dart  chat_contact_tile.dart  chat_header.dart  chat_item.dart  chat_list.dart  chat_list_header.dart  chat_message_bar.dart  custom_inkwell.dart  custom_popup.dart  header_status.dart  message.dart  message_box.dart  message_bubble.dart  message_popup_menu.dart  message_preview.dart  message_viewer.dart  popup_menu_item.dart  profile_header_widget.dart  settings_card_block.dart  svg_image.dart  time_ago_text.dart  timeline_item_render.dart  user_avatar.dart  user_avatar_wb.dart  username.dart  userpic.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/actors/: matrix.rs  mod.rs
native/hub/src/actors/matrix/: client_session_delegate.rs  fetch_room_request.rs  init_request.rs  list_chats_request.rs  logout_request.rs  mod.rs  oidc_auth_request.rs  oidc_finish_request.rs  paginate_timeline_request.rs  process_sync_response_request.rs  refresh_session_request.rs  refresh_token_request.rs  sas_confirm_request.rs  send_message_request.rs  session_callbacks.rs  session_verification_delegate.rs  session_verification_request.rs  sync_background_request.rs  sync_completed_request.rs  sync_new.rs  sync_once_request.rs  sync_request.rs  sync_service_request.rs  upload_encrypted_file_request.rs
native/hub/src/actors/matrix_sync/: mod.rs  sync_request.rs
native/hub/src/extensions/: easy_listener.rs  emitter.rs  iter_await.rs  mod.rs  rinf_writer.rs  test_utils.rs  usize.rs
native/hub/src/matrix/: error.rs  events.rs  media.rs  mod.rs  oidc.rs  room.rs  room_avatar.rs  room_details.rs  room_info.rs  room_list.rs  ruma.rs  sas_verification.rs  session.rs  sync.rs  timeline.rs  timeline_pagination.rs  vector_diff.rs  vector_diff_room.rs  vector_diff_timeline_item.rs
native/hub/src/signals/: dart.rs  full_session.rs  homeserver_login_details.rs  init_client_error.rs  internal.rs  logout_error.rs  mod.rs  oidc_configuration.rs  oidc_error.rs  oidc_prompt.rs  room.rs  save_session_error.rs  sliding_sync_version.rs
native/matrix-sdk-rinf/: Cargo.toml  build.rs
native/matrix-sdk-rinf/src/: authentication.rs  chunk_iterator.rs  client.rs  client_builder.rs  encryption.rs  error.rs  event.rs  helpers.rs  lib.rs  live_location_share.rs  notification.rs  notification_settings.rs  platform.rs  qr_code.rs  room_alias.rs  room_directory_search.rs  room_list.rs  room_member.rs  room_preview.rs  ruma.rs  runtime.rs  session_verification.rs  sync_service.rs  tracing.rs  utd.rs  utils.rs
nix/: attrs.nix  flutter.nix  rinf.nix  shell_darwin.nix  shell_linux.nix  widgetbook.nix
web/: manifest.json
widgetbook/: README.md  analysis_options.yaml  pubspec.yaml
widgetbook/ios/Runner.xcodeproj/: project.pbxproj
widgetbook/lib/: cool_button.dart  main.dart  main.directories.g.dart  user_avatar.dart
widgetbook/lib/helpers/: mock_event_timeline_item.dart  mock_room_info.dart  very_long_text.dart
widgetbook/lib/widgets/: badge.dart  chat_header.dart  chat_item.dart  chat_list_header.dart  header_status.dart  message.dart  message_box.dart  message_preview.dart  message_viewer.dart  my_custom_popup.dart  profile_header_widget.dart  user_avatar.dart  username.dart  userpic.dart
widgetbook/linux/flutter/: generated_plugins.cmake
widgetbook/windows/flutter/: generated_plugins.cmake
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+48 files in other folders)
