# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `target` output folder and
# various Rust configurations.

[workspace]
resolver = "3"
members = ["native/*"]

[workspace.package]
rust-version = "1.89"

[workspace.dependencies]
matrix-sdk = { version = "0.13.0", default-features = false }
# matrix-sdk = { path = "../matrix-rust-sdk/crates/matrix-sdk/", default-features = false }

# matrix-sdk-base = { version = "0.13.0" }

matrix-sdk-common = { version = "0.13.0" }
# matrix-sdk-common = { path = "../matrix-rust-sdk/crates/matrix-sdk-common/" }

# matrix-sdk-crypto = {  version = "0.13.0" }

matrix-sdk-ffi-macros = { version = "0.7.0" }
# matrix-sdk-ffi-macros = { path = "../matrix-rust-sdk/bindings/matrix-sdk-ffi-macros/" }

# matrix-sdk-indexeddb = {  version = "0.13.0", default-features = false }
# matrix-sdk-qrcode = {  version = "0.13.0" }
# matrix-sdk-sqlite = {  version = "0.13.0", default-features = false }
# matrix-sdk-store-encryption = {  version = "0.13.0" }
# matrix-sdk-test = {  version = "0.13.0" }

matrix-sdk-ui = { version = "0.13.0", default-features = false }
# matrix-sdk-ui = { path = "../matrix-rust-sdk/crates/matrix-sdk-ui/", default-features = false }

matrix-sdk-rinf = { path = "./native/matrix-sdk-rinf", default-features = false }

anyhow = "1.0.95"
async-compat = "0.2.4"
async-trait = "0.1.85"
as_variant = "1.3.0"
eyeball-im = { version = "0.7.0", features = ["tracing"] }
futures-util = "0.3.31"
once_cell = "1.20.2"
rinf = "8.7.2"
# Be careful to use commits from the https://github.com/ruma/ruma/tree/ruma-0.12
# branch until a proper release with breaking changes happens.
ruma = { version = "0.12.5", features = [
  "client-api-c",
  "compat-upload-signatures",
  "compat-user-id",
  "compat-arbitrary-length-ids",
  "compat-tag-info",
  "compat-encrypted-stickers",
  "compat-lax-room-create-deser",
  "compat-lax-room-topic-deser",
  "unstable-msc3401",
  "unstable-msc3488",
  "unstable-msc3489",
  "unstable-msc4075",
  "unstable-msc4140",
  "unstable-msc4143",
  "unstable-msc4171",
  "unstable-msc4278",
  "unstable-msc4286",
] }
serde = { version = "1.0.217", features = ["rc"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.1", default-features = false, features = ["sync"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
url = "2.5.4"
zeroize = "1.8.1"
