# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `target` output folder and
# various Rust configurations.

[workspace]
resolver = "3"
members = ["native/*"]

[workspace.package]
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
matrix-sdk = { version = "0.14.0", default-features = false }
matrix-sdk-ui = { version = "0.14.0", default-features = false }
messages = "0.3.1"
rinf = "8.7.2"
ruma = { version = "0.13.0" }
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.20"
tracing-panic = "0.1.2"
url = "2.5.7"
