[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
async-trait = "0.1.87"
messages = "0.3.1"
thiserror = "2.0.16"
serde_json = "1.0.143"
matrix-sdk = { git = "https://github.com/efael/matrix-rust-sdk", branch = "matrix-sdk-0.13.0", features = [
  "native-tls",
] }
matrix-sdk-rinf = { path = "../../../matrix-rust-sdk/crates/matrix-sdk-rinf/", features = [
  "native-tls",
] }

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
