[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
async-trait = { workspace = true }
messages = "0.3.1"
thiserror = { workspace = true }
serde_json = { workspace = true }
matrix-sdk = { workspace = true, features = ["rustls-tls"] }
# matrix-sdk = { git = "https://github.com/efael/matrix-rust-sdk", branch = "matrix-sdk-0.13.0", features = [
#   "native-tls",
# ] }
matrix-sdk-rinf = { path = "../matrix-sdk-rinf", features = ["rustls-tls"] }
# matrix-sdk-rinf = { git = "https://github.com/efael/matrix-rust-sdk", branch = "matrix-sdk-0.13.0", features = [
#   "native-tls",
# ] }

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
