[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
# unwrap_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
async-trait = { workspace = true }
messages = "0.3.1"
thiserror = { workspace = true }
serde_json = { workspace = true }
url.workspace = true
ruma = { workspace = true, features = [
  "html",
  "unstable-unspecified",
  "unstable-msc3488",
  "compat-unset-avatar",
  "unstable-msc3245-v1-compat",
  "unstable-msc4278",
] }

[target.'cfg(target_os = "android")'.dependencies]
matrix-sdk = { workspace = true, default-features = false, features = [
  "automatic-room-key-forwarding",
  "e2e-encryption",
  "rustls-tls",
  "bundled-sqlite",
] }
matrix-sdk-rinf = { workspace = true, default-features = false, features = [
  "rustls-tls",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
matrix-sdk = { workspace = true, default-features = false, features = [
  "automatic-room-key-forwarding",
  "e2e-encryption",
  "native-tls",
  "sqlite",
] }
matrix-sdk-rinf = { workspace = true, default-features = false, features = [
  "native-tls",
] }

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
